--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,6 +4,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: linear-gradient(to top, #f0f1f1, #e2e0e5);
 
 }
 
